# m0dular

./: .gitignore  .gitmodules  README.md  g_defines.h  meson.build  players.h  wincludes.h
features/: aimbot.cpp  aimbot.h  aimbot_types.h
interfaces/: tracing.h
math/: clang_avx512.h  matrix.h  mm_funcs.h  mmath.h  soa_accessor.h  vec_funcs.h  vecsoa_funcs.h  vector.h  vector_operators.h
tests/: allocator.cpp  crc.cpp  intersect.cpp  kd_tree.cpp  mutex.cpp  settings.cpp  shared_mutex.cpp  shmemalloc.cpp  thread_pool.cpp  vector.cpp
utils/: allocwraps.h  atomic_lock.cpp  btree.h  crc32.cpp  crc32.h  freelistallocator.h  handles.cpp  handles.h  history_list.h  intersect.cpp  intersect.h  intersect_box.cpp  intersect_box.h  intersect_box_impl.h  intersect_impl.h  kd_tree.h  md5.cpp  md5.h  memutils.h  mutex.cpp  mutex.h  named_semaphores.cpp  named_semaphores.h  packed_heap.cpp  packed_heap.h  pattern_scan.cpp  pattern_scan.h  rstring.h  scheduler.h  semaphores.cpp  semaphores.h  settings.h  shared_mutex.cpp  shared_mutex.h  shared_utils.h  stackstring.h  threading.cpp  threading.h  utils.h  vfhook.cpp  (+1 more)
